--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
-spring.datasource.url=DB_DRIVER
-spring.datasource.username=DB_LOGIN
-spring.datasource.password=DB_PASSWORD
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=12345
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
