--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=12345
-POSTGRES_DB=autoservice
+POSTGRES_DB=postgres
 POSTGRES_LOCAL_PORT=5433
 POSTGRES_DOCKER_PORT=5432
 POSTGRES_HOST=postgres
