--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.show_sql=false
